<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_scrollFlags="scroll|enterAlways|snap" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                card_view:cardBackgroundColor="@color/white"
                card_view:cardCornerRadius="2dp"
                card_view:cardUseCompatPadding="false"
                card_view:elevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/image_app_logo"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="start|center"                            android:contentDescription="@string/app_name"
                            android:src="@mipmap/app_icon" />

                        <TextView
                            android:id="@+id/text_app_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start|center"
                            android:layout_marginStart="10dp"
                            android:text="@string/app_name"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/black"
                            android:textStyle="bold"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="15dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="start|center"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/ic_version" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/version"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:textColor="@color/black"
                                android:layout_gravity="start"
                                android:textStyle="bold"/>

                            <TextView
                                android:id="@+id/text_version"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/version"
                                android:layout_gravity="start"
                                android:textAppearance="?android:attr/textAppearanceMedium" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="10dp"
                card_view:cardBackgroundColor="@color/white"
                card_view:cardCornerRadius="2dp"
                card_view:cardUseCompatPadding="false"
                card_view:elevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/author"
                        android:layout_gravity="start"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/black"
                        android:textStyle="bold"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="15dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="start|center"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/ic_user" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/company"
                                android:layout_gravity="start"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:textColor="@color/black"
                                android:textStyle="bold"/>

                            <TextView
                                android:id="@+id/text_company"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/company"
                                android:layout_gravity="start"
                                android:textAppearance="?android:attr/textAppearanceMedium" />

                        </LinearLayout>

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="15dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="start|center"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/ic_email" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/email"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:textColor="@color/black"
                                android:textStyle="bold"
                                android:layout_gravity="start"
                                android:autoLink="email"/>

                            <TextView
                                android:id="@+id/text_email"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/email"
                                android:layout_gravity="start"
                                android:textAppearance="?android:attr/textAppearanceMedium" />

                        </LinearLayout>

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="15dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="start|center"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/ic_web" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/website"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:textColor="@color/black"
                                android:textStyle="bold"
                                android:layout_gravity="start"
                                android:autoLink="web"/>

                            <TextView
                                android:id="@+id/text_website"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/website"
                                android:layout_gravity="start"
                                android:textAppearance="?android:attr/textAppearanceMedium" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="15dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="start|center"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/ic_call" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/contact"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:textColor="@color/black"
                                android:textStyle="bold"
                                android:layout_gravity="start"
                                android:autoLink="phone"/>

                            <TextView
                                android:id="@+id/text_contact"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/contact"
                                android:layout_gravity="start"
                                android:textAppearance="?android:attr/textAppearanceMedium" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="10dp"
                card_view:cardBackgroundColor="@color/white"
                card_view:cardCornerRadius="2dp"
                card_view:cardUseCompatPadding="false"
                card_view:elevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about"
                        android:layout_marginStart="5dp"
                        android:layout_gravity="start"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/black"
                        android:textStyle="bold"/>


                    <WebView
                        android:id="@+id/webView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/about"
                        android:textAppearance="?android:attr/textAppearanceMedium" />


                </LinearLayout>


            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>