<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/app_bg">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_scrollFlags="scroll|enterAlways|snap" />


    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:visibility="gone"
        ads:adSize="BANNER"
        ads:adUnitId="@string/admob_banner_id" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/adView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"

               >
                <com.example.util.SquareImageView
                    android:id="@+id/img_gmain"
                    android:layout_width="match_parent"
                    android:layout_height="306dp"
                    android:contentDescription="@string/app_name"
                    android:scaleType="fitXY"
                    android:src="@drawable/placeholder" />

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/img_gmain"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:background="@color/black_transparent"
                    android:padding="2dp">

                    <TextView
                        android:id="@+id/text_title"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="5dp"
                        android:gravity="start"
                        android:padding="2dp"
                        android:text=""
                        android:textColor="@color/white"
                        android:layout_toLeftOf="@+id/img_play"
                        android:layout_toStartOf="@+id/img_play" />

                    <ImageView
                        android:id="@+id/img_play"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="5dp"
                        android:padding="2dp"
                        android:src="@drawable/ic_play" />

                </RelativeLayout>
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/main_sec"
                android:layout_margin="5dp">

                <WebView
                    android:id="@+id/desweb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/app_bg" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/main_sec"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/rel_c_content2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                     android:background="@color/colorPrimary"
                    android:padding="1dp">
                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                     android:padding="8dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    android:text="@string/related_name"
                     android:textColor="@color/white" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/rel_c_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="1dp">

                    <GridView
                        android:id="@+id/gridcat_related"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:numColumns="3"
                        android:verticalSpacing="2dp">

                    </GridView>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>